--- a/DHCP-java-chat/src/server/FormMainServer.form
+++ b/DHCP-java-chat/src/server/FormMainServer.form
@@ -85,6 +85,8 @@
                   <Component id="label" min="-2" pref="135" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="txtCount" min="-2" pref="100" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
+                  <Component id="txtAddress" min="-2" pref="194" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -94,6 +96,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="label" alignment="3" max="32767" attributes="0"/>
                   <Component id="txtCount" alignment="3" max="32767" attributes="0"/>
+                  <Component id="txtAddress" alignment="3" min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -121,6 +124,8 @@
               </Border>
             </Property>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="txtAddress">
         </Component>
       </SubComponents>
     </Container>
